--- a/index.html
+++ b/index.html
@@ -3,20 +3,38 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>To-Do App</title>
+    <!--Material Design Lite -->
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-red.min.css" />
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+
+    <!-- Font Awesome -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
-    <h1>To-Do App</h1>
+    <section class="demo-card-wide mdl-card mdl-shadow--2dp">
+      <h1>To-Do App</h1>
 
-    <form id="addToDoForm">
+    <!-- <form id="addToDoForm">
      <label for="newToDoText">New To-Do:</label>
      <input type="text" id="newToDoText">
      <button type="submit">Add To-Do!</button>
-    </form>
+    </form> -->
 
-    <ul id="toDoList">
-    </ul>
+      <form id="addToDoForm" action="#">
+        <div class="mdl-textfield mdl-js-textfield">
+          <input class="mdl-textfield__input" type="text" id="newToDoText">
+          <label class="mdl-textfield__label" for="sample1">New to-do...</label>
+        </div>
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit">Add</button>
+      </form>
 
-    <script src="app.js"></script>
+      <ul id="toDoList" class="demo-list-control mdl-list">
+      </ul>
 
+      <script src="app.js"></script>
+    </section>
   </body>
 </html>
