refactor code for part 2

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <form id="addToDoForm" action="#">
         <div class="mdl-textfield mdl-js-textfield">
           <input class="mdl-textfield__input" type="text" id="newToDoText">
-          <label class="mdl-textfield__label" for="sample1">New to-do...</label>
+          <label class="mdl-textfield__label" for="newToDoText"</label>
         </div>
         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit">Add</button>
       </form>
